k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tinyteller
  labels:
    app.kubernetes.io/name: tinyteller
